--- a/packages/parser/Cargo.toml
+++ b/packages/parser/Cargo.toml
@@ -1,9 +1,9 @@
 # You must change these to your own details.
 [package]
-name = "rust-webpack-template"
-description = "My super awesome Rust, WebAssembly, and Webpack project!"
+name = "parser"
+description = "Inp parser for wasm"
 version = "0.1.0"
-authors = ["You <you@example.com>"]
+authors = ["xuaps <admin@xuaps.com>"]
 categories = ["wasm"]
 readme = "README.md"
 edition = "2018"
