Add wasm-bidgen proxy

--- a/apps/web-parser/package.json
+++ b/apps/web-parser/package.json
@@ -15,6 +15,6 @@
     "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
-    "parser": "workspace:^"
+    "parser-wasm": "workspace:^"
   }
 }
