--- a/packages/parser/Cargo.toml
+++ b/packages/parser/Cargo.toml
@@ -8,3 +8,6 @@ categories = ["wasm"]
 readme = "README.md"
 edition = "2018"
 
+[dependencies]
+serde = { version = "1.0", features = ["derive"] }
+
