Install wasm-pack

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,12 @@ jobs:
           version: 7
           run_install: false
 
+      - uses: jetli/wasm-pack-action@v0.4.0
+        name: Install wasm-pack
+        with:
+          # Optional version of wasm-pack to install(eg. 'v0.9.1', 'latest')
+          version: 'latest'
+
       - name: Get pnpm store directory
         id: pnpm-cache
         shell: bash
