Fix problem with type

--- a/packages/parser-wasm/package.json
+++ b/packages/parser-wasm/package.json
@@ -5,6 +5,6 @@
   "main": "pkg/parser_wasm.js",
   "version": "0.1.0",
   "scripts": {
-    "build": "wasm-pack build"
+    "build": "wasm-pack build --release"
   }
 }
