--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "NODE_OPTIONS=--openssl-legacy-provider pnpm run --filter parser-wasm build && pnpm run --filter web-parser start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
